--- a/index.html
+++ b/index.html
@@ -61,18 +61,9 @@
 	<div class="work section second" id="experiences">
 		<div class="container">
 			<h1>Experiences</h1>
+		
 			<ul class="work-list">
-				<li>2020 - 2021</li>
-				<li><a href="#">Walmart Canada Corp</a></li>
-				<li>Associate</li>
-				<p><ul>•	Day to Day task of stock updation.	</ul>	<ul>
-•	Reduce prices through system for product		</ul><ul>
-•	Update and check quality of product	
-</ul>
-				</p>
-			</ul>
-			<ul class="work-list">
-				<li>2018 - 2019</li>
+				<li>December 2018 - November 2019</li>
 				<li><a href="#">Immigration Times</a></li>
 				<li>It Help Desk Support</li>
 				<p>
