--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ records of purchase in separate page and check stocks of product . search produc
 			</ul>
 			<ul class="award-list list-flat">
 				<li><a href="#"><b>Suspicious Activity Detection</b><a></li>
-				<li><p style="text-align: justify;">Final year project at my bachelor’s degree of video monitoring for suspicious behaviour in atm hall using python tools like OpenCV.</p></li>
+				<li><p style="text-align: justify;">Final year project at my bachelor’s degree for suspicious behaviour in atm hall using python tools like OpenCV.</p></li>
 			</ul>
 		</div>
 	</div>
